# emg-signal-movement-clf

./: .gitignore  README.md  pyproject.toml  todos.md
data/ninapro/: subjects.csv
notebooks/: classification.ipynb  eda.ipynb  preprocessing.ipynb
report/: main.tex  references.bib
report/tables/: hyptun_results.tex
scripts/: utils.py
src/: utils.py
